feat: add navigation and about-me

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
    border: 0;
  }
  
- 
  *,
  *:before,
  *:after {
@@ -83,3 +82,108 @@
  h6 {
    font-size: inherit;
    font-weight: 400;}
+   
+   body {
+      background: #474545;
+      height: 1000000px;
+   }
+   .nav{
+      display: flex;
+      width: 100%;
+      height: 50px;
+    /* border: 2px solid green; */
+    position: fixed;
+  background-color: #474545;
+    top: 0;
+   }
+   .navigation{
+      display: flex;
+      font-size: 20px;
+      color:azure;
+   flex-direction: row;
+   margin: 0 auto;
+   justify-content: center;
+   align-items: center;
+   }
+   .navigation>li{
+      padding: 5px 15px;
+   text-transform: uppercase;
+   font-family: 'Poppins', sans-serif;
+   background-image: 
+  linear-gradient(
+    transparent 0%,
+    transparent 90%,
+    azure 90%,
+    azure 100%
+    );
+background-repeat: no-repeat;
+background-size: 0% 100%;
+background-position-x: right;
+transition: background-size 300ms;
+   }
+   .navigation>li:hover {
+background-size: 100% 100%;
+background-position-x: left;
+   }
+   .about-me{
+    width: 100%;
+    /* border: 2px solid green; */
+    display: flex;
+    height: 500px;
+  }   
+   .photo{
+    position: absolute;
+    width: 100%;
+    position: relative;
+    perspective: 1000px;
+    overflow: hidden;
+    width: 33.333%;
+    /* border: 2px solid green; */
+    border-radius: 69% 31% 52% 48% / 31% 36% 64% 69% ;
+   }
+  .back{
+    transform: rotateY(180deg) ;
+  }
+  
+.front, .back {
+  position: absolute;
+  transition: 2s;
+  backface-visibility: hidden;
+}
+  .photo:hover .front {transform: rotateY(180deg);}
+  .photo:hover .back {transform: rotateY(360deg);}
+   
+  .information{
+    font-family: 'Poppins', sans-serif;
+    color: azure;
+    font-size: 25px;
+    line-height: 140%;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    border-radius: 90px;
+   }
+   .text{
+    margin: 5%;
+   }
+li>a :active
+a:hover,
+a {
+  text-decoration: none;
+  color: azure;
+}
+.cod{
+      /* border: 2px solid green; */
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+}
+.example{
+  color: azure;
+  font-family: 'Poppins', sans-serif;
+  font-size: 25px;
+  margin: 0 auto;
+  line-height: 140%;
+  margin: 5%;
+}
