--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 :active {
   outline: none;
 }
+
 a:focus,
 a:active {
   outline: none;
@@ -49,26 +50,33 @@ textarea {
 input::-ms-clear {
   display: none;
 }
+
 button {
   cursor: pointer;
 }
+
 button::-moz-focus-inner {
   padding: 0;
   border: 0;
 }
+
 a,
 a:visited {
   text-decoration: none;
 }
+
 a:hover {
   text-decoration: none;
 }
+
 ul li {
   list-style: none;
 }
+
 img {
   vertical-align: top;
 }
+
 h1,
 h2,
 h3,
@@ -82,6 +90,7 @@ h6 {
 body {
   background: #474545;
 }
+
 .nav {
   display: flex;
   width: 100%;
@@ -90,6 +99,7 @@ body {
   background-color: #474545;
   top: 0;
 }
+
 .navigation {
   display: flex;
   font-size: 20px;
@@ -99,30 +109,32 @@ body {
   justify-content: center;
   align-items: center;
 }
-.navigation > li {
+
+.navigation>li {
   padding: 5px 15px;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
-  background-image: linear-gradient(
-    transparent 0%,
-    transparent 90%,
-    azure 90%,
-    azure 100%
-  );
+  background-image: linear-gradient(transparent 0%,
+      transparent 90%,
+      azure 90%,
+      azure 100%);
   background-repeat: no-repeat;
   background-size: 0% 100%;
   background-position-x: right;
   transition: background-size 300ms;
 }
-.navigation > li:hover {
+
+.navigation>li:hover {
   background-size: 100% 100%;
   background-position-x: left;
 }
+
 .about-me {
   width: 100%;
   display: flex;
   height: 500px;
 }
+
 .photo {
   position: absolute;
   width: 100%;
@@ -132,6 +144,7 @@ body {
   width: 33.333%;
   border-radius: 69% 31% 52% 48% / 31% 36% 64% 69%;
 }
+
 .back {
   transform: rotateY(180deg);
 }
@@ -142,9 +155,11 @@ body {
   transition: 2s;
   backface-visibility: hidden;
 }
+
 .photo:hover .front {
   transform: rotateY(180deg);
 }
+
 .photo:hover .back {
   transform: rotateY(360deg);
 }
@@ -159,46 +174,57 @@ body {
   margin: 0 auto;
   border-radius: 90px;
 }
+
 .text {
   margin: 5%;
 }
-li > a :active a:hover,
+
+li>a :active a:hover,
 a {
   text-decoration: none;
   color: azure;
 }
+
 .cod {
   width: 100%;
   display: flex;
   padding: 60px 0;
 }
+
 .logo,
 .example {
   display: flex;
   align-items: center;
 }
+
 .txt,
 .jsexample {
   color: azure;
   font-family: "Poppins", sans-serif;
   margin: 0 0 0 55px;
 }
+
 .jsexample {
   line-height: 140%;
   font-size: 25px;
 }
+
 .txt {
   font-size: 45px;
 }
+
 .example {
   width: 100%;
 }
+
 .logo {
   width: 33.333%;
 }
+
 .skills {
   padding: 90px 0;
 }
+
 .progresbar {
   width: 100%;
   display: flex;
@@ -208,6 +234,7 @@ a {
   height: 100px;
   margin: 15px;
 }
+
 .html,
 .css,
 .js {
@@ -220,6 +247,7 @@ a {
   background-color: black;
   position: relative;
 }
+
 .percent {
   font-family: "Poppins", sans-serif;
   color: azure;
@@ -245,12 +273,14 @@ a {
     stroke-dasharray: 0 100;
   }
 }
+
 .language {
   width: 100%;
   display: grid;
   grid-template-rows: 1fr 1fr;
   padding: 90px 0;
 }
+
 .topic {
   display: flex;
   justify-content: center;
@@ -261,11 +291,13 @@ a {
   font-size: 45px;
   margin: 25px;
 }
+
 .name {
   font-family: "Poppins", sans-serif;
   color: azure;
   font-size: 25px;
 }
+
 .artiicle {
   display: flex;
   width: 100%;
@@ -273,6 +305,7 @@ a {
   align-items: center;
   justify-content: space-around;
 }
+
 .contact {
   display: flex;
   justify-content: center;
